# lifepilot-ai

./: .editorconfig  .env.example  .env.production.example  .gitignore  Colab_Notebook.ipynb  LICENSE  README.md  deployment.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/common/responses/: schemas.py
backend/app/core/config/: settings.py
backend/app/core/database/: mixins.py  redis.py  session.py
backend/app/core/dependencies/: providers.py
backend/app/core/exceptions/: custom.py  handlers.py
backend/app/core/logging/: config.py
backend/app/core/middleware/: request_id.py  security.py  timing.py
backend/app/features/analytics/: __init__.py  api.py  dependencies.py  exceptions.py  models.py  repository.py  schemas.py  service.py
backend/app/utils/: datetime.py  pagination.py  validators.py
backend/migrations/: env.py
backend/migrations/versions/: 04b5703c10b1_create_memory_tables.py  063cdb112c1a_create_vector_document_chunk_table.py  0f498db96e13_add_assistant_chats_table.py  587ed2638f2f_create_embedding_cache_table.py  a1b2c3d4e5f6_create_knowledge_documents_table.py  b2c762756fab_create_auth_and_user_tables.py  b44d0021a1d2_update_documents_metadata_retry.py  e7dddc7d4376_add_analytics_domain_models.py
backend/storage/chroma/: chroma.sqlite3
backend/tests/: conftest.py  test_analytics.py  test_assistant.py  test_auth.py  test_deployment.py  test_embeddings.py  test_knowledge.py  test_main.py  test_memory.py  test_rag.py  test_vector.py
docs/: architecture.md
(+194 files in other folders)
