[tool.poetry]
name = "lifepilot-backend"
version = "0.1.0"
description = "FastAPI backend foundation for LifePilot AI personal life operating system"
authors = ["LifePilot AI Team <info@lifepilot.ai>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.51"
alembic = "^1.18.5"
asyncpg = "^0.31.0"
redis = "^8.0.1"
argon2-cffi = "^25.1.0"
pyjwt = "^2.13.0"
pypdf = "^5.1.0"
python-docx = "^1.1.2"
sentence-transformers = "^3.3.1"
faiss-cpu = "^1.9.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.8.4"
httpx = "^0.28.1"
mypy = "^2.2.0"
aiosqlite = "^0.22.1"
pytest-asyncio = "^1.4.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

